--- a/NodeJS/WebSocket/Using Socket.io/app/index.html
+++ b/NodeJS/WebSocket/Using Socket.io/app/index.html
@@ -1,18 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-		<script src="https://cdn.socket.io/socket.io-3.0.0.js"></script>
-		<script defer src="app.js"></script>
-	</head>
-	<body>
-        <ul>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Real-Time Analytics with Socket.io</title>
+    <script src="https://cdn.socket.io/socket.io-3.0.0.js"></script>
+</head>
+<body>
+    <ul></ul>
+    <input placeholder="message" />
+    <button>Send</button>
 
-        </ul>
-        <input placeholder="message">
-        <button>Send</button>
+    <!-- Move your script here -->
+    <script>
+        const socket = io("ws://localhost:8080");
 
-    </body>
+        // Listen for incoming messages
+        socket.on("message", (text) => {
+            const el = document.createElement("li");
+            el.innerHTML = text;
+            document.querySelector("ul").appendChild(el);
+        });
+
+        // Send message and analytics data when button is clicked
+        document.querySelector("button").onclick = () => {
+            const text = document.querySelector("input").value;
+            socket.emit("message", text);
+
+            // Emit analytics event for sending a message
+            socket.emit("analytics", {
+                event: "send_message",
+                message: text,
+                timestamp: Date.now(),
+            });
+
+            document.querySelector("input").value = "";
+        };
+
+        // Emit analytics event when the page loads
+        window.onload = () => {
+            socket.emit("analytics", { event: "page_load", timestamp: Date.now() });
+        };
+    </script>
+</body>
 </html>
